Fix event checklist on mobile

--- a/RIGS/static/scss/_custom-variables.scss
+++ b/RIGS/static/scss/_custom-variables.scss
@@ -1,6 +1,6 @@
 $font-family-sans-serif:  "Open Sans", sans-serif;
 //Make it look less primary school
-$font-size-base: 0.875rem;
+$font-size-base: 0.8rem;
 $theme-colors: (
   "success": #00C851,
   "warning": #ffbb33,
